# olim

./: .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  CTestCustom.cmake.in  Makefile  README.md  build.sh  build_mex.sh  generate_hessians.py  generate_py_eikonal_cpp.py  generate_py_olim3d_wrapper.py  generate_pyolim_cpp.py  gtest.cmake  measure.org  optimization_todo.org  pyeikonal.extra_defs.cpp  pyolim_extra.cpp  rebuild.sh  run_mex.sh  runtest.cmake  setup.py  testcmp.py  todo.org
maria/: FMeikonal.c  optwgraphs.c
misc/: F0_plot.m  F0_tetra_setup.m  F0_tetra_test.m  F0_tri_test.m  F1_tetra_test.m  F1_tri_newton.m  F1_tri_test.m  accum_stats.sh  common3d.py  comparison.m  count_stats.py  create_time_vs_error_plot_data.py  draw_smart_graph.py  errors.jl  errors.m  errors.py  errors3d.m  errors3d.py  gen_plot_data.cpp  gen_stats.cpp  gfun_basic.txt  hybrid.m  make_s10_gt.m  make_time_vs_error_plots.py  make_time_vs_error_plots_2d.py  masha_reproduce.m  masha_s.m  newton111mp1.m  newton111rhr.m  newton123mp1.m  newton123rhr.m  newton222mp1.m  newton222rhr.m  plot.py  plot_viewer.py  plot_winding_number.m  qpe.m  qpi.m  scratch.cpp  solim4_mp0.txt  (+18 more)
misc/cpp/: README.org  gen_plot_data_2d.cpp  gen_plot_data_3d.cpp  gen_qv_plot_data.cpp  scratch.cpp  timer.hpp  timings.cpp
misc/m/: F0_exact.m  F0_plot.m  F0_tetra_setup.m  F0_tetra_test.m  F0_tri_newton.m  F0_tri_test.m  F1_tri_test.m  README.org  cost_func_tests.m  hybrid.m  masha_f.m  masha_s.m  print_should_skip_test.m  qpe.m  qr3x2.m  sqp.m  timings.m
misc/py/: blah1.py  blah2.py  blah3.py  blah4.py  blah5.py  blah6.py  common.py  common3d.py  create_time_vs_error_plot_data.py  create_time_vs_error_plot_data_3d.py  errors.py  errors3d.py  factoring_test.py  make_2d_time_vs_error_plots.py  make_3d_time_vs_error_plots.py  make_factoring_comparison_plots.py  make_factoring_example_plot.py  make_stats_table.py  make_time_vs_error_plots_2d.py  make_time_vs_error_plots_3d.py  qv_factoring_test.py  slow3.py  speedfuncs.py  speedfuncs3d.py  timings.py
misc/py/new/: make_2d_time_vs_error_plots.py  make_3d_time_vs_error_plots.py  make_factoring_example_plot.py
misc/sh/: accum_stats.sh  create_plots_sample.sh  gen_stats_csv.sh  make_stats_table.sh
old/: fmm.d
plotting/: collect_speed_comparison_data.py  make_2d_time_vs_error_plots.py  make_3d_time_vs_error_plots.py  make_factoring_example_plot.py  make_olim6rhr_speed_comparison_plot.py  make_qv_plots.py  make_speed_comparison_plot.py  make_stats_plot_and_table.py  make_task_plot.py
slurm/: testslurm.sh
src/: abstract_marcher.cpp  abstract_marcher.hpp  abstract_node.hpp  abstract_smart_node.hpp  base_marcher.hpp  base_marcher.impl.hpp  basic_marcher.cpp  basic_marcher.hpp  basic_marcher.impl.hpp  basic_marcher.speed.cpp  basic_marcher.test.cpp  basic_marcher_3d.cpp  basic_marcher_3d.hpp  basic_marcher_3d.impl.hpp  basic_marcher_3d.test.cpp  bitops.hpp  common.defs.hpp  common.hpp  common.macros.hpp  config.hpp.in  conics.cpp  conics.hpp  conics.test.cpp  cost_funcs.cpp  cost_funcs.hpp  cost_funcs.impl.hpp  digraph.hpp  digraph.impl.hpp  eikonal.cpp  eikonal.h  fac.cpp  fac.h  fac.hpp  factored_node.hpp  fast_marcher.cpp  fast_marcher.hpp  fast_marcher_3d.cpp  fast_marcher_3d.hpp  fmm.cpp  fmm.h  (+219 more)
src/eikonal/: fmm.hpp  fmm.impl.hpp  func.cpp  func.hpp  line.hpp  marcher.hpp  marcher.impl.hpp  offsets.hpp  olim  olim.hpp  olim.impl.hpp  olim3d.hpp  olim3d.impl.hpp  slow.hpp  tetra.hpp  tetra.impl.hpp  tri.hpp  tri.impl.hpp
src/quasipot/: func.hpp  line.hpp  marcher.hpp  marcher.impl.hpp  olim.hpp  tetra.hpp  tri.hpp
test/: CMakeLists.txt  basic_marcher.test.cpp  basic_marcher_3d.test.cpp  bitops.test.cpp  cost_funcs.test.cpp  fmm.test.cpp  heap.test.cpp  hybrid.test.cpp  marcher.test.cpp  marcher_3d.test.cpp  mat.test.cpp  numopt.test.cpp  olim.test.common.hpp  olim18_mp0.test.cpp  olim18_mp1.test.cpp  olim18_rhr.test.cpp  olim26_mp0.test.cpp  olim26_mp1.test.cpp  olim26_rhr.test.cpp  olim3d_hu_mp0.test.cpp  olim3d_hu_mp1.test.cpp  olim3d_hu_rhr.test.cpp  olim4_mp0.test.cpp  olim4_mp1.test.cpp  olim4_rhr.test.cpp  olim6_mp0.test.cpp  olim6_mp1.test.cpp  olim6_rhr.test.cpp  olim8_mp0.test.cpp  olim8_mp1.test.cpp  olim8_rhr.test.cpp  olim_wrapper.test.cpp  ordering.test.cpp  py_eikonal.test  pyolim.test  qroots.test.cpp  range.test.cpp  solim4_mp0.test.cpp  test.hpp  test_graph_marcher.test.cpp  (+5 more)
test/eikonal/: CMakeLists.txt  common.hpp  fmm.test.cpp  olim18_mp0.test.cpp  olim18_mp1.test.cpp  olim18_rhr.test.cpp  olim26_mp0.test.cpp  olim26_mp1.test.cpp  olim26_rhr.test.cpp  olim3d_hu_mp0.test.cpp  olim3d_hu_mp1.test.cpp  olim3d_hu_rhr.test.cpp  olim4_mp0.test.cpp  olim4_mp1.test.cpp  olim4_rhr.test.cpp  olim6_mp0.test.cpp  olim6_mp1.test.cpp  olim6_rhr.test.cpp  olim8_mp0.test.cpp  olim8_mp1.test.cpp  olim8_rhr.test.cpp  tetra.test.cpp  tri.test.cpp
writeups/: comparing-updates-domain.ipe  comparing-updates.tex  computing-l.ipe  midpoint_update.ipe  olim18-net.ipe  olim6.tex  olim8pt_update.tex  recursive-start.ipe  rhr3d.tex  template-3d-update-diagrams.ipe
